# macro-mojo

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  ai_script.md  app.py  compose.yaml  config.py  data.sql  pyproject.toml  requirements.txt  schema.dbml  schema.sql  temp_day_view.md
.github/workflows/: mm_test.yml
calorie_tracker/: db_persistence.py  utils.py
db/: data.sql  init_db.py  password.txt.template
folder_with_conftest/: conftest.py
macro_mojo/: ai_agent.py  db_persistence.py  utils.py
mockups/: application.new.css  mockup.css  mockup.html  mockup_brown.css  mockup_brown.html
static/stylesheets/: application.css
templates/: add_nutrition_entry.html  ai_help.html  bad_url.html  dashboard.html  day_view.html  edit_entry.html  edit_meal.html  edit_targets.html  empty_day.html  index.html  layout.html  login.html  markdown_processing.html  meals.html  new_meal.html  targets.html
tests/: data.sql  temp.py  test_ai_agent.py  test_ai_agent_copilot.py  test_app.py  test_db_persistence.py  test_db_persistence_monkeypatch_copilot.py  test_db_unittest_mock_copilot.py  test_sample.py  test_utils.py
